--- a/index.html
+++ b/index.html
@@ -1,5 +1,43 @@
+<!-- 
+ERREUR GIT EXPLIQUÉE:
+Cette erreur se produit car le dépôt distant (GitHub) contient des commits 
+que votre dépôt local n'a pas. Solution:
+1. git pull origin main (récupérer les changements distants)
+2. Résoudre les conflits si nécessaire
+3. git push origin main (pousser vos changements)
+
+NOUVELLE ERREUR (non-fast-forward):
+Les mises à jour ont été rejetées car la pointe de votre branche actuelle 
+est en retard par rapport à son homologue distant. Si vous voulez intégrer 
+les changements distants, utilisez 'git pull' avant de pousser à nouveau.
+Voir 'Note about fast-forwards' dans 'git push --help' pour plus de détails.
+
+COMMENT GÉRER ET RÉSOUDRE CETTE ERREUR:
+
+MÉTHODE 1 (Recommandée - Merge):
+1. git pull origin main
+2. Si conflits: résoudre manuellement dans l'éditeur
+3. git add .
+4. git commit -m "Résolution des conflits"
+5. git push origin main
+
+MÉTHODE 2 (Rebase - Plus propre):
+1. git pull --rebase origin main
+2. Si conflits: résoudre et faire git add .
+3. git rebase --continue
+4. git push origin main
+
+MÉTHODE 3 (Force push - ATTENTION!):
+git push --force origin main
+(⚠️ DANGER: Écrase l'historique distant!)
+
+PRÉVENTION:
+- Toujours faire git pull avant git push
+- Travailler sur des branches séparées
+- Communiquer avec l'équipe avant force push
+-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +53,11 @@
         <nav class="container">
             <!--<img class="logo" src="" alt=""> -->
             <ul class="nav-links">
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="index.html">formation</a></li>
-                <li><a href="index.html">Ecole</a></li>
-                <li><a href="index.html">Cours</a></li>
-                <li><a href="index.html">inscription</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Training</a></li>
+                <li><a href="index.html">School</a></li>
+                <li><a href="index.html">Courses</a></li>
+                <li><a href="index.html">Registration</a></li>
                 <li><a href="index.html">Contact</a></li>
             </ul>
         </nav>
@@ -27,15 +65,15 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Façonnez l'Avenir des nos enfants de la republique</h1>
-            <p>École LES RAMPARDS: L'une des premières école du congo, formant les leaders technologiques de demain</p>
-            <a href="#programs" class="cta-button">Découvrir nos programmes</a>
+            <h1>Shape the Future of our Republic's Children</h1>
+            <p>School LES RAMPARDS: One of the first schools in Congo, training tomorrow's technological leaders</p>
+            <a href="#programs" class="cta-button">Discover our programs</a>
         </div>
     </section>
 <img src="" alt="">
     <section id="news" class="section">
         <div class="container">
-            <h2 class="section-title">Actualité</h2>
+            <h2 class="section-title">News</h2>
             <div id="news-container" class="news-container">
             </div>
         </div>
@@ -43,73 +81,73 @@
 
     <section id="about" class="section">
         <div class="container">
-            <h2 class="section-title">À propos de l'École LES RAMPARDS</h2>
-            <p>l'École LES RAMPARDS est l'un des premiers établissement de formation aux métiers du numérique au Gabon. Notre mission est de former une nouvelle génération de professionnels du numérique capables de relever les défis technologiques de l'Afrique et du monde.</p>
-            <p>Nous offrons des programmes intensifs et pratiques, conçus en collaboration avec des experts de l'industrie, pour garantir que nos étudiants acquièrent les compétences les plus recherchées sur le marché du travail. Notre approche pédagogique innovante combine théorie et pratique, avec un accent particulier sur les projets réels et les stages en entreprise.</p>
-            <p>À l'École du congo, nous ne formons pas seulement des développeurs et des experts en numérique, nous formons les futurs leaders qui façonneront l'avenir technologique du congo et de l'Afrique.</p>
+            <h2 class="section-title">About School LES RAMPARDS</h2>
+            <p>School LES RAMPARDS is one of the first training institutions for digital professions in Congo. Our mission is to train a new generation of digital professionals capable of meeting the technological challenges of Africa and the world.</p>
+            <p>We offer intensive, hands-on programs designed in collaboration with industry experts to ensure our students acquire the most sought-after skills in the job market. Our innovative pedagogical approach combines theory and practice, with a particular focus on real projects and internships.</p>
+            <p>At the School of Congo, we don't just train developers and digital experts, we train the future leaders who will shape the technological future of Congo and Africa.</p>
         </div>
     </section>
     <section id="strengths" class="section">
         <div class="container">
-            <h2 class="section-title">Nos Forces</h2>
+            <h2 class="section-title">Our Strengths</h2>
             <div class="strengths">
                 <div class="strength-card">
                     <div class="strength-icon">💰</div>
-                    <h3>Nos Cours gratuites</h3>
-                    <p>Nous croyons que l'éducation de qualité devrait être accessible à tous. C'est pourquoi nos formations sont entièrement gratuites.</p>
+                    <h3>Free Courses</h3>
+                    <p>We believe that quality education should be accessible to all. That's why our training is completely free.</p>
                 </div>
                 <div class="strength-card">
                     <div class="strength-icon">🚀</div>
-                    <h3>Aucun Prérequis</h3>
-                    <p>Pas besoin de savoir ou d'être un EINSTIN. Notre programme est conçu pour tous les niveaux, du débutant à l'avancé donc (maternel, primaire, secondaire)</p>
+                    <h3>No Prerequisites</h3>
+                    <p>No need to know or be an EINSTEIN. Our program is designed for all levels, from beginner to advanced (maternal, primary, secondary).</p>
                 </div>
                 <div class="strength-card">
                     <div class="strength-icon">🌍</div>
-                    <h3>Pour Toutes et Tous</h3>
-                    <p>Nos programmes sont ouverts à tous, sans distinction de genre, d'âge ou de background. La diversité est notre force.</p>
+                    <h3>For Everyone</h3>
+                    <p>Our programs are open to all, regardless of gender, age, or background. Diversity is our strength.</p>
                 </div>
                 <div class="strength-card">
                     <div class="strength-icon">💼</div>
-                    <h3>Insertion Professionnelle</h3>
-                    <p>Nous travaillons en étroite collaboration avec les entreprises pour faciliter l'insertion professionnelle de nos diplômés.</p>
+                    <h3>Professional Integration</h3>
+                    <p>We work closely with companies to facilitate the professional integration of our graduates.</p>
                 </div>
             </div>
         </div>
     </section>
     <section id="programs" class="section">
         <div class="container">
-            <h2 class="section-title">Nos Programmes</h2>
+            <h2 class="section-title">Our Programs</h2>
             <div class="programs">
                 <div class="program-card">
                     <img src="Capture.PNG" alt="maternel">
                     <div class="program-content">
-                        <h3>section maternel</h3>
-                        <p>vos enfants seronts capable d'apprendre les basics de l'education avec nos apprentisseurs</p>
-                        <a href="./dev.html" class="apply-button">Postuler</a>
+                        <h3>Maternal Section</h3>
+                        <p>Your children will be able to learn the basics of education with our teachers.</p>
+                        <a href="./dev.html" class="apply-button">Apply</a>
                     </div>
                 </div>
                 <div class="program-card">
                     <img src="Capture.PNG" alt="primaire">
                     <div class="program-content">
-                        <h3>Section primaire</h3>
-                        <p>Vos enfants vont développez des stratégies de pour leurs apprentissage en ligne et en presencielle efficacement et maîtrisez les outils numériques pour promouvoir les entreprises.</p>
-                        <a href="https://websim.ai/ecole-numerique/ecole241/postuler/marketing-digital" class="apply-button">Postuler</a>
+                        <h3>Primary Section</h3>
+                        <p>Your children will develop strategies for their online and in-person learning and master digital tools to promote businesses.</p>
+                        <a href="https://websim.ai/ecole-numerique/ecole241/postuler/marketing-digital" class="apply-button">Apply</a>
                     </div>
                 </div>
                 <div class="program-card">
                     <img src="Capture.PNG" alt="secondaire">
                     <div class="program-content">
-                        <h3>Section secondaire</h3>
-                        <p>Créez des interfaces utilisateur intuitives et des expériences digitales engageantes qui captivent les entreprises.</p>
-                        <a href="" class="apply-button">Postuler</a>
+                        <h3>Secondary Section</h3>
+                        <p>Create intuitive user interfaces and engaging digital experiences that captivate businesses.</p>
+                        <a href="" class="apply-button">Apply</a>
                     </div>
                 </div>
                 <div class="program-card">
                     <img src="Capture.PNG" alt="professionnelle">
                     <div class="program-content">
-                        <h3>section professionnelle</h3>
-                        <p>avec complexes scolaire les RAMPARDS vos enfants seront capable d'apprendre et de faire apprendre la societes</p>
-                        <a href="https://websim.ai/ecole-numerique/ecole241/postuler/referencement-digital" class="apply-button">Postuler</a>
+                        <h3>Professional Section</h3>
+                        <p>With the LES RAMPARDS school complex, your children will be able to learn and teach society.</p>
+                        <a href="https://websim.ai/ecole-numerique/ecole241/postuler/referencement-digital" class="apply-button">Apply</a>
                     </div>
                 </div>
             </div>
@@ -117,19 +155,19 @@
     </section>
     <section id="contact" class="section">
         <div class="container">
-            <a href="#Contact" class="cta-button">contactez-nous</a>
-            <p>Vous avez des questions ou souhaitez en savoir plus sur nos programmes ? N'hésitez pas à nous contacter :</p>
+            <a href="#Contact" class="cta-button">Contact Us</a>
+            <p>Do you have any questions or want to know more about our programs? Feel free to contact us:</p>
             <p><strong>Email :</strong> kaundasamuelgaspard@gmail.com</p>
-            <p><strong>Téléphone :</strong> +243 971118556</p>
-            <p><strong>Adresse :</strong> congo democratique</p>
-            <a href="" class="cta-button">Demander une brochure</a>
+            <p><strong>Phone :</strong> +243 971118556</p>
+            <p><strong>Address :</strong> Democratic Republic of the Congo</p>
+            <a href="" class="cta-button">Request a brochure</a>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 École les RAMPARDS. Tous droits réservés.</p>
-            <p>Suivez-nous sur les réseaux sociaux pour rester informé de nos dernières actualités et événements.</p>
+            <p>&copy; 2025 School LES RAMPARDS. All rights reserved.</p>
+            <p>Follow us on social media to stay updated on our latest news and events.</p>
         </div>
     </footer>
     <script src="./accueil.js"></script>
