quelque modification sur la page index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ PRÉVENTION:
 - Communiquer avec l'équipe avant force push
 -->
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
