creation de lien entre la page index et la page contact

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ PRÉVENTION:
     </section>
     <section id="contact" class="section">
         <div class="container">
-            <a href="#Contact" class="cta-button">Contact Us</a>
+            <a href="contact.html" class="cta-button">Contact Us</a>
             <p>Do you have any questions or want to know more about our programs? Feel free to contact us:</p>
             <p><strong>Email :</strong> kaundasamuelgaspard@gmail.com</p>
             <p><strong>Phone :</strong> +243 971118556</p>
