--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ PRÉVENTION:
                 <li><a href="index.html">School</a></li>
                 <li><a href="index.html">Courses</a></li>
                 <li><a href="index.html">Registration</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
