modification fait realiser sur la page index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 ERREUR GIT EXPLIQUÉE:
 Cette erreur se produit car le dépôt distant (GitHub) contient des commits 
 que votre dépôt local n'a pas. Solution:
@@ -53,12 +53,12 @@ PRÉVENTION:
         <nav class="container">
             <!--<img class="logo" src="" alt=""> -->
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Training</a></li>
-                <li><a href="index.html">School</a></li>
-                <li><a href="index.html">Courses</a></li>
-                <li><a href="index.html">Registration</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">accueil</a></li>
+                <li><a href="index.html">formation</a></li>
+                <li><a href="index.html">apropos de nous</a></li>
+                <li><a href="index.html">nos responsables</a></li>
+                <li><a href="index.html">inscription</a></li>
+                <li><a href="contact.html">nos contact</a></li>
             </ul>
         </nav>
     </header>
