creation de la page inscription en ligne premier commit

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@ PRÉVENTION:
             <ul class="nav-links">
                 <li><a href="index.html">accueil</a></li>
                 <li><a href="index.html">formation</a></li>
-                <li><a href="index.html">apropos de nous</a></li>
-                <li><a href="index.html">nos responsables</a></li>
+                <li><a href="index.html">apropos</a></li>
+                <li><a href="index.html">responsables</a></li>
                 <li><a href="index.html">inscription</a></li>
-                <li><a href="contact.html">nos contact</a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
     </header>
@@ -123,7 +123,7 @@ PRÉVENTION:
                     <div class="program-content">
                         <h3>Maternal Section</h3>
                         <p>Your children will be able to learn the basics of education with our teachers.</p>
-                        <a href="./dev.html" class="apply-button">Apply</a>
+                        <a href="inscription.html" class="apply-button">Apply</a>
                     </div>
                 </div>
                 <div class="program-card">
@@ -131,7 +131,7 @@ PRÉVENTION:
                     <div class="program-content">
                         <h3>Primary Section</h3>
                         <p>Your children will develop strategies for their online and in-person learning and master digital tools to promote businesses.</p>
-                        <a href="https://websim.ai/ecole-numerique/ecole241/postuler/marketing-digital" class="apply-button">Apply</a>
+                        <a href="inscription.html" class="apply-button">Apply</a>
                     </div>
                 </div>
                 <div class="program-card">
@@ -139,7 +139,7 @@ PRÉVENTION:
                     <div class="program-content">
                         <h3>Secondary Section</h3>
                         <p>Create intuitive user interfaces and engaging digital experiences that captivate businesses.</p>
-                        <a href="" class="apply-button">Apply</a>
+                        <a href="inscription.html" class="apply-button">Apply</a>
                     </div>
                 </div>
                 <div class="program-card">
@@ -147,7 +147,7 @@ PRÉVENTION:
                     <div class="program-content">
                         <h3>Professional Section</h3>
                         <p>With the LES RAMPARDS school complex, your children will be able to learn and teach society.</p>
-                        <a href="https://websim.ai/ecole-numerique/ecole241/postuler/referencement-digital" class="apply-button">Apply</a>
+                        <a href="inscription.html" class="apply-button">Apply</a>
                     </div>
                 </div>
             </div>
@@ -157,8 +157,8 @@ PRÉVENTION:
         <div class="container">
             <a href="contact.html" class="cta-button">Contact Us</a>
             <p>Do you have any questions or want to know more about our programs? Feel free to contact us:</p>
-            <p><strong>Email :</strong> kaundasamuelgaspard@gmail.com</p>
-            <p><strong>Phone :</strong> +243 971118556</p>
+            <p><strong>Email :</strong> 22bk030@esisalama.org</p>
+            <p><strong>Phone :</strong> +243 970804801</p>
             <p><strong>Address :</strong> Democratic Republic of the Congo</p>
             <a href="" class="cta-button">Request a brochure</a>
         </div>
