--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ PRÉVENTION:
                 <li><a href="index.html">formation</a></li>
                 <li><a href="index.html">apropos</a></li>
                 <li><a href="index.html">responsables</a></li>
-                <li><a href="index.html">inscription</a></li>
+                <li><a href="inscription.html">inscription</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
