quelque modification sur la page inscription done

--- a/accueil/inscription.html
+++ b/accueil/inscription.html
@@ -451,9 +451,7 @@
 
         <div class="inscription-container">
             <div class="tabs">
-                <button class="tab active" onclick="showTab('etudiant')">Étudiant</button>
-                <button class="tab" onclick="showTab('formation')">Formation Continue</button>
-                <button class="tab" onclick="showTab('entreprise')">Entreprise</button>
+                <button class="tab active" onclick="showTab('etudiant')">quelques informations sur l'eleve</button>
             </div>
 
             <div id="success-message" class="success-message">
