quelque modification sur la page responsable.html not finish

--- a/accueil/responsables.html
+++ b/accueil/responsables.html
@@ -131,8 +131,8 @@
                     <div class="staff-info">
                         <p>Directeur depuis 10 ans, M. Martin supervise l'ensemble des activités pédagogiques et administratives de l'école.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">j.martin@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 89</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804801</p>
                             <p>🏢 Bureau 101</p>
                         </div>
                     </div>
@@ -145,8 +145,8 @@
                     <div class="staff-info">
                         <p>Responsable de la coordination pédagogique et du suivi des élèves.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">s.bernard@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 90</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804802</p>
                             <p>🏢 Bureau 102</p>
                         </div>
                     </div>
@@ -159,8 +159,8 @@
                     <div class="staff-info">
                         <p>Gestion administrative, inscriptions et relations avec les familles.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">p.dubois@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 91</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804803</p>
                             <p>🏢 Secrétariat</p>
                         </div>
                     </div>
@@ -178,8 +178,8 @@
                     <div class="staff-info">
                         <p>Spécialisée en algèbre et géométrie. 15 ans d'expérience dans l'enseignement.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">m.laurent@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 92</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804802</p>
                             <p>🏢 Salle 201</p>
                         </div>
                     </div>
@@ -192,8 +192,8 @@
                     <div class="staff-info">
                         <p>Littérature française et expression écrite. Coordinateur des projets culturels.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">t.petit@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 93</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804803</p>
                             <p>🏢 Salle 105</p>
                         </div>
                     </div>
@@ -206,8 +206,8 @@
                     <div class="staff-info">
                         <p>Langue anglaise et civilisation britannique. Responsable des échanges internationaux.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">a.moreau@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 94</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804804</p>
                             <p>🏢 Salle 203</p>
                         </div>
                     </div>
@@ -220,8 +220,8 @@
                     <div class="staff-info">
                         <p>Physique-Chimie et Sciences de la Vie et de la Terre. Responsable du laboratoire.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">d.rousseau@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 95</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804804</p>
                             <p>🏢 Laboratoire</p>
                         </div>
                     </div>
@@ -234,8 +234,8 @@
                     <div class="staff-info">
                         <p>Histoire contemporaine et géographie européenne. Coordinatrice des sorties pédagogiques.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">c.simon@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 96</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804804</p>
                             <p>🏢 Salle 107</p>
                         </div>
                     </div>
@@ -248,8 +248,8 @@
                     <div class="staff-info">
                         <p>Sports collectifs et athlétisme. Entraîneur de l'équipe de football de l'école.</p>
                         <div class="contact-info">
-                            <p>📧 <span class="email">p.michel@ecole.fr</span></p>
-                            <p>📞 01 23 45 67 97</p>
+                            <p>📧 <span class="email">samuelgaspard06@gmail.com</span></p>
+                            <p>📞 +243 970804805</p>
                             <p>🏢 Gymnase</p>
                         </div>
                     </div>
