--- a/accueil/contact.html
+++ b/accueil/contact.html
@@ -277,7 +277,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">formation</a></li>
-                <li><a href="services.html">responsables</a></li>
+                <li><a href="responsables.html">responsables</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
