la page contact.html les modifications done

--- a/accueil/contact.html
+++ b/accueil/contact.html
@@ -335,8 +335,8 @@
                 <div class="info-item">
                     <i>📍</i>
                     <div>
-                        <h3>Adresse</h3>
-                        <p>avenue les RAMPARDS<br>Congo rdc</p>
+                        <h3>votre Adresse</h3>
+                        <p>avenue les RAMPARDS<br>Congo RDC</p>
                     </div>
                 </div>
                 
@@ -352,7 +352,7 @@
                     <i>✉️</i>
                     <div>
                         <h3>Email</h3>
-                        <p>complexescolRampards@gmail.com</p>
+                        <p>samuelgaspard06@gmail.com</p>
                     </div>
                 </div>
                 
@@ -360,9 +360,9 @@
                     <i>🕒</i>
                     <div>
                         <h3>Horaires d'ouverture</h3>
-                        <p>Lundi - Vendredi: 8h00 - 18h00<br>
-                           Samedi: 9h00 - 12h00<br>
-                           Dimanche: Fermé</p>
+                        <p>Lundi - Vendredi: 7h00 - 18h00<br>
+                           Samedi: 8h00 - 12h00<br>
+                           Dimanche: Fermé (close)</p>
                     </div>
                 </div>
 
