ajout de la carte de localisation sur la page contact.html pas encore finis

--- a/accueil/contact.html
+++ b/accueil/contact.html
@@ -378,8 +378,20 @@
 
         <section class="map-section">
             <h2>Notre localisation</h2>
-            <div class="map-placeholder">
-                <p>Carte Google Maps avenue RAMPARDS congo drc</p>
+            <div class="map-container">
+                <!-- Remplacez cette iframe par celle obtenue sur Google Maps -->
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3973.123456789!2d15.123456!3d-4.123456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2sAvenue%20des%20Remparts!5e0!3m2!1sfr!2scd!4v1234567890"
+                    width="100%" 
+                    height="400" 
+                    style="border:0; border-radius: 10px;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                <div style="margin-top: 15px; text-align: center;">
+                    <a href="https://share.google/iLN66tiMDmzC8CuD2" target="_blank" style="color: #3498db; text-decoration: none; font-weight: bold;">📍 Voir sur Google Maps</a>
+                </div>
             </div>
         </section>
     </main>
