quelque modification done

--- a/accueil/contact.html
+++ b/accueil/contact.html
@@ -390,7 +390,7 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
                 <div style="margin-top: 15px; text-align: center;">
-                    <a href="https://share.google/iLN66tiMDmzC8CuD2" target="_blank" style="color: #3498db; text-decoration: none; font-weight: bold;">📍 Voir sur Google Maps</a>
+                    <a href="https://www.google.com/maps/place/Coll%C3%A8ge+de+Rempart,+CG9C+Q5,+Lubumbashi" target="_blank" style="color: #3498db; text-decoration: none; font-weight: bold;">📍 Voir sur Google Maps</a>
                 </div>
             </div>
         </section>
