--- a/accueil/index.html
+++ b/accueil/index.html
@@ -15,12 +15,12 @@
         <nav class="container">
             <!--<img class="logo" src="" alt=""> -->
             <ul class="nav-links">
-                <li><a href="index.html">accueil</a></li>
-                <li><a href="index.html">formation</a></li>
-                <li><a href="index.html">apropos</a></li>
-                <li><a href="index.html">responsables</a></li>
-                <li><a href="inscription.html">inscription</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Formation</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="index.html">Responsables</a></li>
+                <li><a href="inscription.html">Inscription</a></li>
+                <li><a href="contact.html">Contact </a></li>
             </ul>
         </nav>
     </header>
