quelque modification sur la page index.html

--- a/accueil/inscription.html
+++ b/accueil/inscription.html
@@ -434,18 +434,18 @@
     <header>
         <nav class="container">
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="index.html">Home/a></li>
                 <li><a href="about.html">formation</a></li>
-                <li><a href="services.html">apropos</a></li>
+                <li><a href="services.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="inscription.html">responsables</a></li>
+                <li><a href="inscription.html">responsable</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container">
         <section class="inscription-header">
-            <h1>Inscription en ligne</h1>
+            <h1>Inscription on ligne</h1>
             <p>Rejoignez notre communauté éducative et commencez votre parcours d'apprentissage</p>
         </section>
 
@@ -546,7 +546,7 @@
 
                         <div class="form-row">
                             <div class="form-group">
-                                <label for="annee-etude">Année d'études souhaitée</label>
+                                <label for="annee-etude">Année d'études que souhaitée</label>
                                 <select id="annee-etude" name="annee-etude">
                                     <option value="2024">Exemple:2024-2025</option>
                                     <option value="2025">Exemple:2025-2026</option>
@@ -555,7 +555,7 @@
                             <div class="form-group">
                                 <label for="modalite">Modalité de formation</label>
                                 <select id="modalite" name="modalite">
-                                    <option value="presentiel">Présentiel</option>
+                                    <option value="presentiel">Présentiel(sur place)</option>
                                     <option value="distance">À distance</option>
                                     <option value="hybride">Hybride</option>
                                 </select>
@@ -590,7 +590,7 @@
                 <div class="pricing-cards">
                     <div class="pricing-card" onclick="selectPlan('basic')">
                         <h4>Formation Courte</h4>
-                        <div class="price">299€</div>
+                        <div class="Prix">75$</div>
                         <div class="duration">1-3 mois</div>
                         <ul>
                             <li>Cours en ligne</li>
