--- a/accueil/contact.html
+++ b/accueil/contact.html
@@ -276,7 +276,7 @@
         <nav class="container">
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">formation</a></li>
+                <li><a href="inscription.html">formation</a></li>
                 <li><a href="responsables.html">responsables</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
