--- a/accueil/index.html
+++ b/accueil/index.html
@@ -27,15 +27,15 @@
 
     <section class="hero">
         <div class="hero-content">
-            <h1>Shape the Future of our Republic's Children</h1>
+            <h1>construire la vie numerique avec nos enfants</h1>
             <p>School LES RAMPARDS: One of the first schools in Congo, training tomorrow's technological leaders</p>
-            <a href="#programs" class="cta-button">Discover our programs</a>
+            <a href="#programs" class="cta-button">parcourir notre Programme</a>
         </div>
     </section>
 <img src="" alt="">
     <section id="news" class="section">
         <div class="container">
-            <h2 class="section-title">News</h2>
+            <h2 class="section-title">Nouvelle</h2>
             <div id="news-container" class="news-container">
             </div>
         </div>
